package server;

public class costanti {
    public static final String indirizzoClient="127.0.0.1";
    public static final Integer portaClient1=333;
    public static final Integer portaClient2=555;
    public static final Integer portaServer=777;
    public static final Integer colonne=10;
    public static final Integer righe=10;
}
